--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "refresh": "rm -rf ./node_modules && rm -rf ./ios/Pods && yarn && pod install --project-directory=./ios"
   },
   "dependencies": {
     "react": "17.0.2",
