fix: READMEにおいて、動作確認済み環境などを追加

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint .",
+    "setup": "yarn && pod install --project-directory=./ios",
     "refresh": "rm -rf ./node_modules && rm -rf ./ios/Pods && yarn && pod install --project-directory=./ios"
   },
   "dependencies": {
